# lsdb-go

./: .gitignore  README.md  build.ps1
backend/: .env.example  .gitignore  PLAN.md  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/doc/: doc.md
backend/internal/app/: app.go  app_test.go  command_sync_stream_test.go  item_rename_test.go  listen_diagnostics.go  listen_diagnostics_test.go  monitor_stream_test.go
backend/internal/config/: config.go  config_test.go
backend/internal/database/: database.go  database_test.go
backend/internal/handler/: auth_handler.go  command_handler.go  item_handler.go  monitor_handler.go  resource_handler.go  role_handler.go  speedtest_handler.go
backend/internal/middleware/: auth.go  (+2 more)
backend/scripts/: migrate_test_db.go  migrate_test_db.sql  smoke_test_db.go  verify_test_db.go
desktop/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: API.md  DEPLOY.md  DEVELOPMENT.md
frontend/: .gitignore  .umirc.ts  README.md  package.json  pnpm-lock.yaml  vercel.json
frontend-shadcn/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend-shadcn/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/doc/: llms-full-cn.txt  llms-full.txt
frontend/mock/: userAPI.ts
frontend/src/: access.ts  app.tsx  global.css  role.css  search.css
(+165 files in other folders)
