[package]
name = "lsdb-desktop"
version = "0.1.0"
description = "LSDB backend desktop controller"
authors = ["LSDB"]
edition = "2021"

[lib]
name = "lsdb_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
